--- a/.github/workflows/scrape_data.yml
+++ b/.github/workflows/scrape_data.yml
@@ -39,8 +39,22 @@ jobs:
           echo "Installed Chrome version: $CHROME_VERSION"
           CHROME_MAJOR_VERSION=$(echo $CHROME_VERSION | cut -d '.' -f 1)
           echo "Chrome major version: $CHROME_MAJOR_VERSION"
-          CHROMEDRIVER_VERSION=$(wget -qO- https://chromedriver.storage.googleapis.com/LATEST_RELEASE_$CHROME_MAJOR_VERSION)
-          echo "Latest ChromeDriver version: $CHROMEDRIVER_VERSION"
+          retry_count=3
+          while [ $retry_count -gt 0 ]; do
+            CHROMEDRIVER_VERSION=$(wget -qO- https://chromedriver.storage.googleapis.com/LATEST_RELEASE_$CHROME_MAJOR_VERSION)
+            if [ $? -eq 0 ]; then
+              echo "Latest ChromeDriver version: $CHROMEDRIVER_VERSION"
+              break
+            else
+              echo "Failed to fetch ChromeDriver version. Retrying..."
+              retry_count=$((retry_count - 1))
+              sleep 5  # Wait before retrying
+            fi
+          done
+          if [ $retry_count -eq 0 ]; then
+            echo "Failed to fetch ChromeDriver version after multiple retries."
+            exit 1
+          fi
 
       - name: Download and install ChromeDriver
         run: |
