--- a/.github/workflows/scrape_data.yml
+++ b/.github/workflows/scrape_data.yml
@@ -1,38 +1,20 @@
-name: Scrape Data
+name: Etsy Scraper
 
 on:
   push:
     branches:
-      - main
-  schedule:
-    - cron: '0 0 * * *'  # This runs the workflow daily at midnight (adjust as needed)
+      - main  # Replace with your main branch name
 
 jobs:
-  scrape:
+  build:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.x'  # Adjust as needed
-
-      - name: Install dependencies
+      - name: Set up Chrome and ChromeDriver
         run: |
-          python -m pip install --upgrade pip
-          pip install pandas selenium
-
-      - name: Install Chrome and ChromeDriver
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y wget unzip xvfb libxi6 libgconf-2-4
-
-          # Install the latest version of Google Chrome
-          wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
-          sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list'
           sudo apt-get update
           sudo apt-get install -y google-chrome-stable
 
@@ -41,19 +23,21 @@ jobs:
 
           # Download and install ChromeDriver
           wget -q --continue -P /tmp/ "https://chromedriver.storage.googleapis.com/$LATEST_VERSION/chromedriver_linux64.zip"
-          sudo unzip /tmp/chromedriver_linux64.zip -d /usr/local/bin/
-          sudo chmod +x /usr/local/bin/chromedriver
+          unzip /tmp/chromedriver_linux64.zip -d /usr/local/bin/
+          chmod +x /usr/local/bin/chromedriver
 
-      - name: Run scraper
-        run: |
-          python etsy_scraper.py
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'  # Replace with your Python version (e.g., 3.8)
 
-      - name: Commit and push results
+      - name: Install dependencies
         run: |
-          git config --global user.name 'github-actions'
-          git config --global user.email 'github-actions@github.com'
-          git add necklaces_pendant_scraped_data.csv  # Adjust file name as needed
-          git commit -m 'Update scraped data'
-          git push
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt  # Replace with your requirements file if needed
+
+      - name: Run Etsy Scraper
+        run: |
+          python etsy_scraper.py  # Replace with your script name
+
+      # Add more steps as needed, such as saving outputs or artifacts
