--- a/.github/workflows/scrape_data.yml
+++ b/.github/workflows/scrape_data.yml
@@ -39,10 +39,23 @@ jobs:
           # Determine latest ChromeDriver version
           LATEST_VERSION=$(curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE)
 
-          # Download Chromedriver
-          curl -o /tmp/chromedriver_linux64.zip "https://storage.googleapis.com/chrome-for-testing-public/126.0.6478.126/linux64/chromedriver-linux64.zip"
-          sudo unzip /tmp/chromedriver_linux64.zip -d /usr/local/bin/
-          sudo chmod +x /usr/local/bin/chromedriver
+         # Download ChromeDriver
+curl -o /tmp/chromedriver_linux64.zip "https://storage.googleapis.com/chrome-for-testing-public/126.0.6478.126/linux64/chromedriver-linux64.zip"
+
+# Navigate to the bin directory
+cd /usr/local/bin/
+
+# Unzip the downloaded file
+sudo unzip /tmp/chromedriver_linux64.zip
+
+# Rename the extracted file to just 'chromedriver' if needed
+sudo mv chromedriver_linux64/chromedriver chromedriver
+
+# Remove the leftover directory (optional)
+sudo rm -rf chromedriver_linux64
+
+# Make the ChromeDriver executable
+sudo chmod +x chromedriver
 
 
       - name: Run scraper
